--- a/style.css
+++ b/style.css
@@ -613,6 +613,9 @@ body {
 .horizontal-scroller .skill img {
   height: 300px;
   margin: 0 auto;
+  inline-size: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .horizontal-scroller .skill .description {
   padding-top: 30px;
@@ -744,6 +747,66 @@ body {
   display: inline-block;
   content: "✓";
   position: absolute;
+}
+
+.social-icons-container {
+  top: 30%;
+  transform: translateY(-150%);
+  position: fixed;
+  z-index: 20;
+}
+
+#toggle-social {
+  position: fixed;
+  width: 25px;
+  height: 25px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--navbar-color);
+  transform: rotate(-90deg);
+  z-index: 20;
+  cursor: pointer;
+}
+#toggle-social svg {
+  fill: var(--text);
+}
+
+.hidesocial {
+  transform: translateX(-100%);
+}
+
+.social {
+  position: fixed;
+  width: 70px;
+  font-size: 30px;
+  margin-top: 25px;
+  box-shadow: 2px 2px 8px 0 var(--shadow-color);
+  transition: 0.2s linear;
+  z-index: 10;
+}
+.social li {
+  height: 60px;
+  position: relative;
+}
+.social li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  /* border-bottom: 1px solid rgba(0, 0, 0, .4);*/
+  transition: all 0.4s linear;
+  border: 1px solid black;
+  background: var(--secondary);
+  color: var(--text);
+}
+.social li a svg {
+  fill: var(--text);
+}
+.social li a:hover {
+  width: 90px;
 }
 
 .footer {
@@ -1551,64 +1614,5 @@ body {
   0% {
     transform: rotate(360deg);
   }
-}
-.social-icons-container {
-  top: 30%;
-  transform: translateY(-150%);
-  position: fixed;
-  z-index: 20;
-}
-
-#toggle-social {
-  position: fixed;
-  width: 25px;
-  height: 25px;
-  padding: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--navbar-color);
-  transform: rotate(-90deg);
-  z-index: 20;
-  cursor: pointer;
-}
-#toggle-social svg {
-  fill: var(--text);
-}
-
-.hidesocial {
-  transform: translateX(-100%);
-}
-
-.social {
-  position: fixed;
-  width: 70px;
-  font-size: 30px;
-  margin-top: 25px;
-  box-shadow: 2px 2px 8px 0 var(--shadow-color);
-  transition: 0.2s linear;
-  z-index: 10;
-}
-.social li {
-  height: 60px;
-  position: relative;
-}
-.social li a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  /* border-bottom: 1px solid rgba(0, 0, 0, .4);*/
-  transition: all 0.4s linear;
-  border: 1px solid black;
-  background: var(--secondary);
-  color: var(--text);
-}
-.social li a svg {
-  fill: var(--text);
-}
-.social li a:hover {
-  width: 90px;
 }
 /*# sourceMappingURL=style.css.map */
