--- a/style.scss
+++ b/style.scss
@@ -647,9 +647,9 @@ body{
         img{
             height: 300px;
             margin: 0 auto;
-            // inline-size: 100%;
+            inline-size: 100%;
             // aspect-ratio: 1 / 1;
-            // object-fit: cover;
+            object-fit: contain;
             // margin-bottom: 100px;
         }
         .description{
@@ -750,9 +750,6 @@ body{
         }
       }
                   
-      .sended{
-          // background-color: green !important;
-      }
       .error-message{
           color: red;
       }
@@ -800,6 +797,65 @@ body{
           }
           // animation: bounce .5s ease-in infinite;
       }
+  }
+}
+.social-icons-container{
+  top: 30%;
+  transform: translateY(-150%);
+  position: fixed;
+  z-index: 20;
+}
+#toggle-social{
+  position: fixed;
+  width: 25px;
+  height: 25px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--navbar-color);
+  transform: rotate(-90deg);
+  z-index: 20;
+  cursor: pointer;
+  svg{
+    fill: var(--text);
+  }
+}
+.hidesocial{
+  transform: translateX(-100%);
+}
+.social{
+  position: fixed;
+  width: 70px;
+  font-size: 30px;
+  margin-top: 25px;
+  box-shadow: 2px 2px 8px 0 var(--shadow-color);
+  transition: 0.2s linear;
+  z-index: 10;
+    li{
+      height: 60px;
+      position: relative;
+      a{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        // line-height: 60px;
+        // padding-left: 25%;
+      /* border-bottom: 1px solid rgba(0, 0, 0, .4);*/
+        transition: all .4s linear;
+        border: 1px solid black;
+        background: var(--secondary);
+        color: var(--text);
+        svg{
+          fill: var(--text);
+        }
+        &:hover
+        {
+            width: 90px;
+        }
+    }
   }
 }
 .footer{
@@ -1525,88 +1581,4 @@ body{
     }
   }
 
-  .social-icons-container{
-    top: 30%;
-    transform: translateY(-150%);
-    position: fixed;
-    z-index: 20;
-  }
-  #toggle-social{
-    position: fixed;
-    width: 25px;
-    height: 25px;
-    padding: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--navbar-color);
-    transform: rotate(-90deg);
-    z-index: 20;
-    cursor: pointer;
-    svg{
-      fill: var(--text);
-    }
-  }
-  .hidesocial{
-    transform: translateX(-100%);
-  }
-  .social{
-    position: fixed;
-    width: 70px;
-    font-size: 30px;
-    margin-top: 25px;
-    box-shadow: 2px 2px 8px 0 var(--shadow-color);
-    transition: 0.2s linear;
-    z-index: 10;
-      li{
-        height: 60px;
-        position: relative;
-        a{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          height: 100%;
-          // line-height: 60px;
-          // padding-left: 25%;
-        /* border-bottom: 1px solid rgba(0, 0, 0, .4);*/
-          transition: all .4s linear;
-          border: 1px solid black;
-          background: var(--secondary);
-          color: var(--text);
-          svg{
-            fill: var(--text);
-          }
-          &:hover
-          {
-              width: 90px;
-          }
-      }
-    }
-  }
-// .social li:nth-child(1) a:hover{
-//     // background: #4267B2;
-//     // background: #383838;
-//     padding-left: 50%;
-//     border-radius: 0px 7px 7px 0px;
-// }
-// .social li:nth-child(2) a:hover{
-//     // background: #0e76a8;
-//     padding-left: 40%;
-//     border-radius: 0px 7px 7px 0px;
-// }
-// .social li:nth-child(3) a:hover{
-//     // background: #1f1f1f;
-//     padding-left: 45%;
-//     border-radius: 0px 7px 7px 0px;
-// }
-// .social li:nth-child(4) a:hover{
-//     // background: #BB001B;
-//     padding-left: 40%;
-//     border-radius: 0px 7px 7px 0px;
-// }
-// .social li:nth-child(5) a:hover{
-//   border-radius: 0px 7px 7px 0px;
-//   width: 70px;
-//   cursor: pointer;
-// }
+
