--- a/style.css
+++ b/style.css
@@ -27,10 +27,19 @@ body {
   background-color: var(--primary);
 }
 
+::-moz-selection {
+  color: var(--primary);
+  background: var(--accent-color);
+}
+
+::selection {
+  color: var(--primary);
+  background: var(--accent-color);
+}
+
 .preload {
   display: flex;
   opacity: 1;
-  transition: 300ms linear;
   justify-content: center;
   align-items: center;
   width: 100vw;
@@ -53,7 +62,7 @@ body {
   width: 26px;
   height: 26px;
   border-radius: 50%;
-  background-color: var(--text);
+  background-color: var(--secondary);
   box-shadow: 0px 0px 10px var(--accent-color);
   -webkit-animation-timing-function: cubic-bezier(0, 1, 1, 0);
           animation-timing-function: cubic-bezier(0, 1, 1, 0);
@@ -79,17 +88,18 @@ body {
           animation: lds-ellipsis3 0.6s infinite;
 }
 .preload .loading-text {
-  opacity: 0.6;
-  font-size: 18vw;
-  letter-spacing: 3vw;
+  opacity: 0.2;
+  font-weight: 700;
+  font-size: 22vw;
+  letter-spacing: 1vw;
   position: absolute;
   color: var(--text);
-  text-shadow: 0px 0px 40px var(--accent-color);
 }
 
 .preload-finished {
+  top: -30vh;
   opacity: 0;
-  transition: 300ms linear;
+  transition: 500ms linear;
   pointer-events: none;
 }
 
@@ -774,8 +784,8 @@ body {
 }
 
 .social-icons-container {
-  top: 50vh;
-  transform: translateY(-150%);
+  top: 50%;
+  transform: translateY(-50%);
   position: fixed;
   z-index: 20;
   width: min(70px, 12vw);
@@ -798,6 +808,9 @@ body {
 #toggle-social svg {
   fill: var(--text);
 }
+#toggle-social:hover svg {
+  fill: var(--accent-color);
+}
 
 .hidesocial {
   transform: translateX(-100%);
@@ -805,17 +818,17 @@ body {
 
 .social {
   position: fixed;
-  width: 100%;
   height: 100%;
+  padding-left: min(20px, 1vw);
   font-size: 30px;
   margin-top: 25px;
-  box-shadow: 2px 2px 8px 0 var(--shadow-color);
   transition: 0.2s linear;
   z-index: 10;
 }
 .social li {
-  height: 15%;
+  padding: 1px;
   position: relative;
+  list-style-type: none;
 }
 .social li a {
   display: flex;
@@ -823,17 +836,20 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
-  /* border-bottom: 1px solid rgba(0, 0, 0, .4);*/
+  border-radius: 50%;
   transition: all 0.4s linear;
-  border: 1px solid black;
-  background: var(--secondary);
+  border: 1px solid var(--secondary);
+  background: var(--navbar-color);
   color: var(--text);
+  box-shadow: 0px 0px 2px 0 var(--shadow-color);
 }
 .social li a svg {
   fill: var(--text);
+  padding: 5px;
 }
 .social li a:hover {
-  width: 90px;
+  border: 1px solid var(--accent-color);
+  box-shadow: 0px 0px 4px 0 var(--accent-color);
 }
 
 .footer {
