--- a/style.css
+++ b/style.css
@@ -685,6 +685,7 @@ body {
 }
 .contact-section form {
   margin: 0;
+  position: relative;
   max-width: 550px;
   width: 98%;
   background-color: var(--primary);
@@ -738,6 +739,80 @@ body {
 .contact-section form button:hover {
   box-shadow: 0px 0px 5px var(--accent-color);
   color: var(--accent-color);
+}
+.contact-section form .info {
+  height: 2ch;
+  width: 2ch;
+  background-color: var(--navbar-color);
+  border: 1px solid var(--text);
+  display: flex;
+  margin-top: 8px;
+  margin-left: 95%;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.contact-section form .info:hover {
+  cursor: pointer;
+}
+.contact-section form .info-modal {
+  display: none;
+  position: absolute;
+  word-wrap: break-word;
+  width: min(100%, 550px);
+  overflow: auto;
+  margin: 0 auto;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 8px;
+  z-index: 10;
+  height: 500px;
+  background-color: var(--primary);
+  box-shadow: 0px 0px 10px var(--shadow-color);
+  border: 1px solid var(--secondary);
+}
+.contact-section form .info-modal_header {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  padding: 20px;
+  background-color: var(--secondary);
+  justify-content: space-between;
+  align-items: center;
+}
+.contact-section form .info-modal_content h3 {
+  margin-top: 15px;
+  margin-left: 15px;
+}
+.contact-section form .info-modal_content ul {
+  list-style: none;
+  margin-bottom: 15px;
+}
+.contact-section form .info-modal_content ul li {
+  padding-left: 25px;
+  font-size: 0.9rem;
+}
+.contact-section form .info-modal_content ul li::before {
+  content: "- ";
+}
+.contact-section form .info-modal_close-btn {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  transform: rotate(45deg);
+}
+.contact-section form .info-modal_close-btn .close-btn_line-one {
+  background-color: var(--text);
+  width: 30px;
+  height: 3px;
+  transform: translateY(6px);
+}
+.contact-section form .info-modal_close-btn .close-btn_line-two {
+  background-color: var(--text);
+  width: 30px;
+  transform: rotate(-90deg) translateX(-3px);
+  height: 3px;
 }
 .contact-section form .error-message {
   color: red;
@@ -802,6 +877,7 @@ body {
   align-items: center;
   background-color: var(--navbar-color);
   transform: rotate(-90deg);
+  transition: transform 100ms linear;
   z-index: 20;
   cursor: pointer;
 }
