--- a/style.css
+++ b/style.css
@@ -902,11 +902,9 @@ body {
   z-index: 10;
 }
 .social li {
-  padding: 1px;
-  position: relative;
   list-style-type: none;
 }
-.social li a {
+.social li .social-icon-elem {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -919,13 +917,117 @@ body {
   color: var(--text);
   box-shadow: 0px 0px 2px 0 var(--shadow-color);
 }
-.social li a svg {
+.social li .social-icon-elem svg {
   fill: var(--text);
   padding: 5px;
 }
-.social li a:hover {
+.social li .social-icon-elem:hover {
   border: 1px solid var(--accent-color);
   box-shadow: 0px 0px 4px 0 var(--accent-color);
+}
+.social li .social-icon-elem .gmail-info-box {
+  position: absolute;
+  width: 150px;
+  height: 50px;
+  left: -250px;
+  transition: 200ms all linear;
+  padding: 5px;
+  border-radius: 8px;
+  background-color: var(--navbar-color);
+  box-shadow: 0px 0px 4px 0 var(--shadow-color);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 5px;
+  -webkit-backdrop-filter: blur(8px);
+          backdrop-filter: blur(8px);
+}
+.social li .social-icon-elem .gmail-info-box.active {
+  left: 70px;
+}
+.social li .social-icon-elem .gmail-info-box .goto-btn {
+  border: 1px solid var(--text);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social li .social-icon-elem .gmail-info-box .goto-btn::before {
+  content: "Go to Gmail";
+  position: absolute;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  border-radius: 8px;
+  padding: 5px;
+  height: 30px;
+  top: -50px;
+  background-color: var(--navbar-color);
+  -webkit-backdrop-filter: blur(8px);
+          backdrop-filter: blur(8px);
+  box-shadow: 0px 0px 4px 0 var(--shadow-color);
+  opacity: 0;
+}
+.social li .social-icon-elem .gmail-info-box .goto-btn:hover::before {
+  opacity: 1;
+  transition: 200ms opacity ease-in-out;
+}
+.social li .social-icon-elem .gmail-info-box .copy-to-clipboard-btn {
+  position: relative;
+  border: 1px solid var(--text);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social li .social-icon-elem .gmail-info-box .copy-to-clipboard-btn::before {
+  content: "Copy to Clipboard";
+  position: absolute;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  border-radius: 8px;
+  padding: 5px;
+  height: 30px;
+  top: -50px;
+  background-color: var(--navbar-color);
+  -webkit-backdrop-filter: blur(8px);
+          backdrop-filter: blur(8px);
+  box-shadow: 0px 0px 4px 0 var(--shadow-color);
+  opacity: 0;
+}
+.social li .social-icon-elem .gmail-info-box .copy-to-clipboard-btn:hover::before {
+  opacity: 1;
+  transition: 200ms opacity ease-in-out;
+}
+
+.snackbar {
+  position: fixed;
+  z-index: 20;
+  background-color: var(--navbar-color);
+  box-shadow: 0px 0px 4px 0 var(--shadow-color);
+  width: 300px;
+  height: 50px;
+  border-radius: 8px;
+  bottom: -80px;
+  opacity: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  color: var(--text);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 300ms all ease-in-out;
+}
+.snackbar.active {
+  bottom: 80px;
+  opacity: 1;
+  transition: 300ms all ease-in-out;
 }
 
 .footer {
