--- a/style.scss
+++ b/style.scss
@@ -943,10 +943,10 @@ body{
   transition: 0.2s linear;
   z-index: 10;
     li{
-      padding: 1px;
-      position: relative;
+      // padding: 1px;
+      // position: relative;
       list-style-type: none;
-      a{
+      .social-icon-elem{
         display: flex;
         justify-content: center;
         align-items: center;
@@ -967,7 +967,105 @@ body{
           border: 1px solid var(--accent-color);
           box-shadow: 0px 0px 4px 0 var(--accent-color);
         }
+        .gmail-info-box{
+          position: absolute;
+          width: 150px;
+          height: 50px;
+          left: -250px;
+          transition: 200ms all linear;
+          padding: 5px;
+          border-radius: 8px;
+          background-color: var(--navbar-color);
+          box-shadow: 0px 0px 4px 0 var(--shadow-color);
+          display: flex;
+          justify-content: flex-end;
+          align-items: center;
+          gap: 5px;
+          backdrop-filter: blur(8px);
+          &.active{
+            left: 70px;
+          }
+          .goto-btn{
+            // background-color: var(--text);
+            border: 1px solid var(--text);
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &::before{
+              content: "Go to Gmail";
+              position: absolute;
+              width: max-content;
+              border-radius: 8px;
+              padding: 5px;
+              height: 30px;
+              top: -50px;
+              background-color: var(--navbar-color);
+              backdrop-filter: blur(8px);
+              box-shadow: 0px 0px 4px 0 var(--shadow-color);
+              opacity: 0;
+            }
+            &:hover::before{
+              opacity: 1;
+              transition: 200ms opacity ease-in-out;
+            }
+          }
+          .copy-to-clipboard-btn{
+            // background-color: black;
+            position: relative;
+            border: 1px solid var(--text);
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &::before{
+              content: "Copy to Clipboard";
+              position: absolute;
+              width: max-content;
+              border-radius: 8px;
+              padding: 5px;
+              height: 30px;
+              top: -50px;
+              background-color: var(--navbar-color);
+              backdrop-filter: blur(8px);
+              box-shadow: 0px 0px 4px 0 var(--shadow-color);
+              opacity: 0;
+            }
+            &:hover::before{
+              opacity: 1;
+              transition: 200ms opacity ease-in-out;
+            }
+          }
+        }
     }
+  }
+}
+.snackbar{
+  position: fixed;
+  z-index: 20;
+  background-color: var(--navbar-color);
+  box-shadow: 0px 0px 4px 0 var(--shadow-color);
+  width: 300px;
+  height: 50px;
+  border-radius: 8px;
+  bottom: -80px;
+  opacity: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  color: var(--text);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 300ms all ease-in-out;
+  &.active{
+    bottom: 80px;
+    opacity: 1;
+    transition: 300ms all ease-in-out;
   }
 }
 .footer{
@@ -1670,5 +1768,3 @@ body{
     transform: rotate(360deg);
     }
   }
-
-
