--- a/style.scss
+++ b/style.scss
@@ -966,14 +966,16 @@ body{
         {
           border: 1px solid var(--accent-color);
           box-shadow: 0px 0px 4px 0 var(--accent-color);
+          cursor: pointer;
         }
         .gmail-info-box{
           position: absolute;
-          width: 150px;
+          width: 140px;
           height: 50px;
-          left: -250px;
-          transition: 200ms all linear;
-          padding: 5px;
+          left: -240px;
+          transform-origin: left;
+          transition: 300ms all ease-in-out;
+          padding: 5px; 
           border-radius: 8px;
           background-color: var(--navbar-color);
           box-shadow: 0px 0px 4px 0 var(--shadow-color);
@@ -982,11 +984,13 @@ body{
           align-items: center;
           gap: 5px;
           backdrop-filter: blur(8px);
+          pointer-events: none;
           &.active{
             left: 70px;
+            pointer-events: all;
+            transition: 300ms all ease-in-out;
           }
-          .goto-btn{
-            // background-color: var(--text);
+          .gmail-info-btn{
             border: 1px solid var(--text);
             width: 40px;
             height: 40px;
@@ -996,7 +1000,7 @@ body{
             justify-content: center;
             align-items: center;
             &::before{
-              content: "Go to Gmail";
+              left: -10px;
               position: absolute;
               width: max-content;
               border-radius: 8px;
@@ -1011,34 +1015,34 @@ body{
             &:hover::before{
               opacity: 1;
               transition: 200ms opacity ease-in-out;
+            }
+            &:hover{
+              cursor: pointer;
+              color: var(--text);
+            }
+            svg{
+              line{
+                stroke: var(--text);
+              }
+              path{
+                fill: var(--text);
+              }
+            }
+          }
+          .goto-btn{
+            &::before{
+              content: "Go to Gmail";
+            }
+          }
+          .goto-form-btn{
+            &::before{
+              content: "Go to Form";
             }
           }
           .copy-to-clipboard-btn{
-            // background-color: black;
-            position: relative;
-            border: 1px solid var(--text);
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             &::before{
+              left: -30px;
               content: "Copy to Clipboard";
-              position: absolute;
-              width: max-content;
-              border-radius: 8px;
-              padding: 5px;
-              height: 30px;
-              top: -50px;
-              background-color: var(--navbar-color);
-              backdrop-filter: blur(8px);
-              box-shadow: 0px 0px 4px 0 var(--shadow-color);
-              opacity: 0;
-            }
-            &:hover::before{
-              opacity: 1;
-              transition: 200ms opacity ease-in-out;
             }
           }
         }
@@ -1053,7 +1057,7 @@ body{
   width: 300px;
   height: 50px;
   border-radius: 8px;
-  bottom: -80px;
+  bottom: -20px;
   opacity: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -1062,8 +1066,9 @@ body{
   justify-content: center;
   align-items: center;
   transition: 300ms all ease-in-out;
+  backdrop-filter: blur(5px);
   &.active{
-    bottom: 80px;
+    bottom: 85px;
     opacity: 1;
     transition: 300ms all ease-in-out;
   }
