fixed social icons & white space in footer

--- a/style.css
+++ b/style.css
@@ -859,8 +859,7 @@ body {
 }
 
 .social-icons-container {
-  top: 50%;
-  transform: translateY(-50%);
+  top: calc(50vh - 120px);
   position: fixed;
   z-index: 20;
   width: min(70px, 12vw);
@@ -1065,6 +1064,7 @@ body {
 }
 .footer .footer-top .quick-links ul li {
   line-height: 0.9rem;
+  padding: 2px;
 }
 .footer .footer-top .quick-links ul li a {
   font-size: 1rem;
@@ -1102,15 +1102,16 @@ body {
 }
 .footer p {
   color: var(--text);
+  position: relative;
 }
 .footer p::before {
-  width: 80%;
-  height: 1px;
-  left: 50%;
-  transform: translateX(-50%);
-  content: "";
-  position: absolute;
   background-color: var(--text);
+  content: "";
+  width: 300%;
+  height: 1px;
+  position: absolute;
+  top: -10px;
+  left: -100%;
 }
 
 @media screen and (max-width: 692px) {
