--- a/style.scss
+++ b/style.scss
@@ -1081,6 +1081,7 @@ body{
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow: hidden;
   hr{
     position: absolute;
     width: 80%;
