--- a/style.css
+++ b/style.css
@@ -1034,6 +1034,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow: hidden;
 }
 .footer hr {
   position: absolute;
