--- a/style.css
+++ b/style.css
@@ -974,6 +974,7 @@ body {
           backdrop-filter: blur(8px);
   box-shadow: 0px 0px 4px 0 var(--shadow-color);
   opacity: 0;
+  pointer-events: none;
 }
 .social li .social-icon-elem .gmail-info-box .gmail-info-btn:hover::before {
   opacity: 1;
